--- a/AppBolivar/CanvasManifest.json
+++ b/AppBolivar/CanvasManifest.json
@@ -165,6 +165,11 @@
     "Test_Maestro",
     "Screen2",
     "scHistoriaMedicaNutricion",
-    "scHistoriaMedicaOftalmologia"
+    "scHistoriaMedicaOftalmologia",
+    "scHistoriaMedicaPediatria",
+    "scHistoriaMedicaOtorrinolaringologia",
+    "scHistoriaMedicaMedicinaGeneral",
+    "scHistoriaCirugiaPediatrica",
+    "scHistoriaGinecologia"
   ]
 }
