--- a/AppBolivar/Src/Atencion Cliente Citas.fx.yaml
+++ b/AppBolivar/Src/Atencion Cliente Citas.fx.yaml
@@ -230,23 +230,11 @@
 
         gal_Citas_Pendientes As gallery.galleryVertical:
             Height: =505
-            Items: |
-                =/*Filter(
-                    Sort(
-                        'public.Medical_Center_Ticket';
-                        fecha_cita;
-                        SortOrder.Descending
-                    );
-                    Upper(DNITextInput.Text) in Upper(Nombre_Paciente);
-                    Text(
-                        fecha_cita;
-                        "dd/mm/yyyy"
-                    ) = Text(
-                        Today();
-                        "dd/mm/yyyy"
-                    );
-                    id_sede = _varSede.id
-                )*/
+            Items: |-
+                =With({
+                  temp: ShowColumns(colEstatus, "estatu")
+                },
+                
                 Search(
                     Filter(
                         AddColumns(
@@ -261,14 +249,15 @@
                                 IsBlank(DatePickerCitas.SelectedDate),
                                 fecha_format = Text(Today(),"dd/mm/yyyy"),
                                 fecha_format = Text(DatePickerCitas.SelectedDate,"dd/mm/yyyy")
-                            ),id_sede = _varSede.id
-                    ),
+                            ),id_sede = _varSede.id, If(IsEmpty(colEstatus), Estatus = "En Cola",Estatus in temp.estatu)),
                     DNITextInput.Text,"Correo","id_Pacientes_DNI","Nombre_Paciente","Estatus"
-                )
+                ))
+                
+                //GalleryFiltro
             Layout: =Layout.Vertical
             ShowScrollbar: =false
             TemplateSize: =100
-            Width: =If(_ResponsiveM = false,  1034, 1292)
+            Width: =If(_ResponsiveM = false,  1034, 1280)
             X: =17
             Y: =137
             ZIndex: =5
@@ -681,7 +670,7 @@
                 Visible: =!IconHistoria.Visible
                 Width: =32
                 X: =If(_ResponsiveM = false, 957, 1215)
-                Y: =2
+                Y: =4
                 ZIndex: =4
 
             IconCaja As icon.Money:
@@ -765,7 +754,7 @@
                 Visible: =!IconHistoria.Visible
                 Width: =32
                 X: =If(_ResponsiveM = false, 863,1121)
-                Y: =2
+                Y: =4
                 ZIndex: =5
 
             IconTriaje As icon.Health:
@@ -823,7 +812,7 @@
                 Visible: =!IconHistoria.Visible
                 Width: =32
                 X: =If(_ResponsiveM = false, 910 , 1168)
-                Y: =2
+                Y: =4
                 ZIndex: =6
 
             IconHistoria As icon.Medical:
@@ -899,9 +888,10 @@
             Height: =32
             Icon: =Icon.FilterFlat
             OnSelect: |-
-                =UpdateContext({_varFiltroe:true});
+                =UpdateContext({_varFiltroe:true});Clear(colEstatus);UpdateContext({_varCheckbox:false});
+                UpdateContext({_varCheckbox:true});
             Width: =32
-            X: =1247
+            X: =If(_ResponsiveM = false, 990,1247)
             Y: =84
             ZIndex: =8
 
@@ -3967,55 +3957,56 @@
         Y: =24
         ZIndex: =81
 
-    GroupFilterEstados As group:
-        Height: =5
-        Width: =5
-        X: =60
-        Y: =60
-        ZIndex: =84
+    ContainerFiltro As groupContainer.manualLayoutContainer:
+        BorderThickness: =2
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =259
+        RadiusBottomLeft: =12
+        RadiusBottomRight: =12
+        RadiusTopLeft: =12
+        RadiusTopRight: =12
+        Visible: =_varFiltroe
+        Width: =397
+        X: =872
+        Y: =190
+        ZIndex: =83
 
-        Rectangle67 As rectangle:
-            Fill: =RGBA(0, 0, 0, 0.25)
-            Height: =768
-            OnSelect: |-
-                =UpdateContext({_varFiltroe:false})
-            Visible: =_varFiltroe
-            Width: =1366
-            ZIndex: =82
-
-        ContainerFiltro As groupContainer.manualLayoutContainer:
-            BorderThickness: =2
-            Fill: =RGBA(255, 255, 255, 1)
+        GalleryFiltro As gallery.galleryVertical:
+            DelayItemLoading: =true
             Height: =259
-            RadiusBottomLeft: =12
-            RadiusBottomRight: =12
-            RadiusTopLeft: =12
-            RadiusTopRight: =12
-            Visible: =_varFiltroe
+            Items: =["En cola","En Atención", "Atendido"]
+            Layout: =Layout.Vertical
+            LoadingSpinner: =LoadingSpinner.Data
+            ShowScrollbar: =false
+            TemplatePadding: =10
+            TemplateSize: =50
             Width: =397
-            X: =872
-            Y: =190
-            ZIndex: =83
+            ZIndex: =1
 
-            Gallery6 As gallery.galleryVertical:
-                DelayItemLoading: =true
-                Height: =259
-                Items: =["En cola","En Atención", "Atendido","Pagado"]
-                Layout: =Layout.Vertical
-                LoadingSpinner: =LoadingSpinner.Data
-                ShowScrollbar: =false
-                TemplatePadding: =10
-                TemplateSize: =50
-                Width: =397
-                WrapCount: =2
+            Checkbox2 As checkbox:
+                FontWeight: =FontWeight.Semibold
+                Height: =40
+                OnCheck: |-
+                    =Collect(colEstatus, { estatu: ThisItem.Value})
+                OnSelect: =Select(Parent)
+                OnUncheck: =RemoveIf(colEstatus, "estatu" = ThisItem.Value)
+                Reset: =_varCheckbox
+                Size: =12
+                Text: =ThisItem.Value
+                X: =17
+                Y: =5
                 ZIndex: =1
 
-                Checkbox2 As checkbox:
-                    Height: =40
-                    OnSelect: =Select(Parent)
-                    Text: =ThisItem.Value
-                    X: =20
-                    ZIndex: =1
+        Icon61 As icon.Cancel:
+            Color: =RGBA(0, 0, 0, 1)
+            Height: =32
+            Icon: =Icon.Cancel
+            OnSelect: |-
+                =UpdateContext({_varFiltroe: false})
+            Width: =32
+            X: =351
+            Y: =10
+            ZIndex: =2
 
     Group29 As group:
         Height: =5
