--- a/AppBolivar/Src/Caja.fx.yaml
+++ b/AppBolivar/Src/Caja.fx.yaml
@@ -2323,6 +2323,69 @@ Caja As screen:
             Y: =Container21_1.Y+0.5*Self.Height
             ZIndex: =2
 
+    IconEstados_1 As icon.FilterFlatFilled:
+        Color: =RGBA(0, 0, 0, 1)
+        Height: =32
+        Icon: =Icon.FilterFlat
+        OnSelect: |-
+            =UpdateContext({_varFiltroe:true});Clear(colEstatus);UpdateContext({_varCheckbox:false});
+            UpdateContext({_varCheckbox:true});
+        Width: =32
+        X: =1304
+        Y: =182
+        ZIndex: =57
+
+    ContainerFiltro_1 As groupContainer.manualLayoutContainer:
+        BorderThickness: =2
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =259
+        RadiusBottomLeft: =12
+        RadiusBottomRight: =12
+        RadiusTopLeft: =12
+        RadiusTopRight: =12
+        Visible: =_varFiltroe
+        Width: =397
+        X: =907
+        Y: =187
+        ZIndex: =58
+
+        GalleryFiltro_1 As gallery.galleryVertical:
+            DelayItemLoading: =true
+            Height: =259
+            Items: =["En cola","En Atención", "Atendido"]
+            Layout: =Layout.Vertical
+            LoadingSpinner: =LoadingSpinner.Data
+            ShowScrollbar: =false
+            TemplatePadding: =10
+            TemplateSize: =50
+            Width: =397
+            ZIndex: =1
+
+            Checkbox2_1 As checkbox:
+                FontWeight: =FontWeight.Semibold
+                Height: =40
+                OnCheck: |-
+                    =Collect(colEstatus, { estatu: ThisItem.Value})
+                OnSelect: =Select(Parent)
+                OnUncheck: =
+                Reset: =_varCheckbox
+                Size: =12
+                Text: =ThisItem.Value
+                X: =17
+                Y: =5
+                ZIndex: =1
+
+        Icon61_1 As icon.Cancel:
+            Color: =RGBA(0, 0, 0, 1)
+            Height: =32
+            Icon: =Icon.Cancel
+            OnSelect: |-
+                =UpdateContext({_varFiltroe: false})
+            Width: =32
+            X: =351
+            Y: =10
+            ZIndex: =2
+
     Calendario_34 As group:
         Height: =5
         Width: =5
