--- a/AppBolivar/Src/Triaje_Dashboard.fx.yaml
+++ b/AppBolivar/Src/Triaje_Dashboard.fx.yaml
@@ -769,6 +769,57 @@ Triaje_Dashboard As screen:
         Y: =410
         ZIndex: =30
 
+    ContainerFiltro_2 As groupContainer.manualLayoutContainer:
+        BorderThickness: =2
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =259
+        RadiusBottomLeft: =12
+        RadiusBottomRight: =12
+        RadiusTopLeft: =12
+        RadiusTopRight: =12
+        Visible: =_varFiltroe
+        Width: =397
+        X: =872
+        Y: =190
+        ZIndex: =33
+
+        GalleryFiltro_2 As gallery.galleryVertical:
+            DelayItemLoading: =true
+            Height: =259
+            Items: =["En cola","En Atención", "Atendido"]
+            Layout: =Layout.Vertical
+            LoadingSpinner: =LoadingSpinner.Data
+            ShowScrollbar: =false
+            TemplatePadding: =10
+            TemplateSize: =50
+            Width: =397
+            ZIndex: =1
+
+            Checkbox2_2 As checkbox:
+                FontWeight: =FontWeight.Semibold
+                Height: =40
+                OnCheck: |-
+                    =Collect(colEstatus, { estatu: ThisItem.Value})
+                OnSelect: =Select(Parent)
+                OnUncheck: =RemoveIf(colEstatus, "estatu" = ThisItem.Value)
+                Reset: =_varCheckbox
+                Size: =12
+                Text: =ThisItem.Value
+                X: =17
+                Y: =5
+                ZIndex: =1
+
+        Icon61_2 As icon.Cancel:
+            Color: =RGBA(0, 0, 0, 1)
+            Height: =32
+            Icon: =Icon.Cancel
+            OnSelect: |-
+                =UpdateContext({_varFiltroe: false})
+            Width: =32
+            X: =351
+            Y: =10
+            ZIndex: =2
+
     GroupSearchFecha_2 As group:
         Height: =5
         Width: =5
@@ -800,4 +851,16 @@ Triaje_Dashboard As screen:
             X: =733
             Y: =175
             ZIndex: =32
+
+    IconEstados_2 As icon.FilterFlatFilled:
+        Color: =RGBA(0, 0, 0, 1)
+        Height: =32
+        Icon: =Icon.FilterFlat
+        OnSelect: |-
+            =UpdateContext({_varFiltroe:true});Clear(colEstatus);UpdateContext({_varCheckbox:false});
+            UpdateContext({_varCheckbox:true});
+        Width: =32
+        X: =1303
+        Y: =178
+        ZIndex: =34
 
